syntax = "proto3";

package ecommerce.adminorder.v1;

option go_package = "backend/api/admin/order/v1;adminorderv1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

import "backend/api/cart/v1/cart.proto";
import "backend/api/order/v1/order.proto";
import "backend/api/user/v1/user.proto";

service AdminOrder {
  // 查询全部订单列表
  rpc GetAllOrders(GetAllOrdersReq) returns (AdminOrderReply) {
    option (google.api.http) = {
      get: "/v1/admin/orders"
    };
  }

}

// 查询订单列表请求的消息结构
message GetAllOrdersReq {
  uint32 page = 1; // 分页参数：当前页码，默认值为 0
  uint32 page_size = 2; // 分页参数：每页大小，默认值为 20，最大值为 100
}

message SubOrderItem {
  cart.v1.CartItem item = 1; // 购物车中的商品项
  double cost = 2; // 商品单价
}

message SubOrder {
  int64 order_id = 1; // 订单 ID
  int64 sub_order_id = 2; // 子订单 ID
  double total_amount = 3; // 订单总价
  string consumer_id = 4; // 用户 ID
  user.v1.ConsumerAddress address = 5; // 用户地址信息
  string consumer_email = 6; // 用户邮箱
  string currency = 7 [(validate.rules).string.len = 3]; // 货币代码（如 USD、CNY），长度固定为 3
  repeated SubOrderItem sub_order_items = 8; // 订单项列表
  order.v1.PaymentStatus payment_status = 9; // 支付状态
  order.v1.ShippingStatus shipping_status = 10; // 货运状态,冗余, 减少查询
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

message AdminOrderReply {
  repeated SubOrder orders = 1; // 订单列表
}
